--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
+	<link href="./assets/tailwind.min.css" rel="stylesheet">
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
+<body class="w-screen h-screen">
 </body>
 </html>
